--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -4,7 +4,7 @@
 
   <div formGroupName="nombreCompleto">
 
-    <div class="form-group row" [ngClass]="{'was-validated': forma.get('nombre').valid }">
+    <div class="form-group row" [ngClass]="{'was-validated': forma.get('nombre') }">
       <label class="col-2 col-form-label">Nombre</label>
       <div class="col-8">
 
