--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,20 +1,24 @@
+
 <h4>Formularios <small>template</small></h4>
 <hr>
 
 <form  novalidate=""  (ngSubmit) ="guardar(forma)" #forma="ngForm">
 
-  <div>
-
     <div class="form-group row has-danger">
-      <label class="col-2 col-form-label">Nombre</label>
+
+      <label class="col-2 col-form-label"> Nombre </label>
       <div class="col-8">
+        <!-- Si utilizo [ngModel]="usuario.nombre" en el .ts se obtienen los datos pero no cambia la variable
+             Si utilizo [(ngModel)]="usuario.nombre" en el .ts se obtienen y se cambia el valor en la variable -->
 
-        <!-- // Si utilizo [ngModel]="usuario.nombre" en el .ts se obtienen los datos pero no cambia la variable
-
-        //Si utilizo [(ngModel)]="usuario.nombre" en el .ts se obtienen y se cambia el valor en la variable -->
-
-        <input class="form-control" type="text" placeholder="Nombre" name="nombre"
-        [ngModel]="usuario.nombre" minlength="5" required #nombre="ngModel">
+      <input class="form-control"
+             type="text"
+             placeholder="Nombre"
+             name="nombre"
+             [ngModel]="usuario.nombre"
+             minlength="5"
+             required
+             #nombre="ngModel">
 
         <div class="valid-feedback" *ngIf="nombre.errors?.required">
           campo requerido
@@ -27,42 +31,54 @@
     </div>
 
     <div class="form-group row">
-      <label class="col-2 col-form-label">Apellido</label>
+
+      <label class="col-2 col-form-label"> Apellido </label>
+
       <div class="col-8">
-        <input class="form-control" type="text" placeholder="Apellido"
-         name="apellido" [ngModel]="usuario.apellido" required #apellido="ngModel">
+        <input class="form-control"
+               type="text"
+               placeholder="Apellido"
+               name="apellido"
+               [ngModel]="usuario.apellido"
+               required
+               #apellido="ngModel">
+
         <div class="text text-danger" *ngIf="apellido.errors?.required">
           campo requerido
         </div>
       </div>
     </div>
 
-  </div>
+
 
   <div class="form-group row">
     <label class="col-2 col-form-label">Correo</label>
     <div class="col-md-8">
 
-      <input class="form-control" type="email" placeholder="Correo electrónico"
-      name="email" [ngModel]="usuario.email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
-      #email="ngModel">
+      <input class="form-control"
+             type="email"
+             placeholder="Correo electrónico"
+             name="email"
+             [ngModel]="usuario.email"
+             required
+             pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+             #email="ngModel">
       <div class="text text-danger" *ngIf="email.errors?.required">
         campo requerido
       </div>
+
       <div class="text text-danger" *ngIf="email.invalid">
         correo invalido
       </div>
     </div>
   </div>
 
-
-
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
     <div class="input-group col-md-8">
-      <button type="submit" class="btn btn-outline-primary">
+        <button [disabled]="!forma.valid" type="submit" class="btn btn-outline-primary">
         Guardar
-      </button>
+        </button>
     </div>
   </div>
 
