--- a/src/app/components/data/data.component.html
+++ b/src/app/components/data/data.component.html
@@ -1,23 +1,30 @@
 <h4>Formularios <small>data</small></h4>
 <hr>
-<form [formGroup]="forma" (ngSubmit)="guardar()">
+<form  [formGroup]="forma" (ngSubmit)="guardar()">
 
   <div formGroupName="nombreCompleto">
 
     <div class="form-group row" >
-      <label class="col-2 col-form-label">Nombre</label>
+
+      <label class="col-2 col-form-label"> Nombre </label>
+
       <div class="col-8">
 
-        <input class="form-control"
-               type="text"
-               placeholder="Nombre"
-               formControlName="nombre">
-        <div  *ngIf="forma.get('nombreCompleto.nombre').errors?.required">
-          El nombre es necesario
-        </div>
-        <div *ngIf="forma.get('nombreCompleto.nombre').errors?.minlength">
-         Por lo menos tres caracteres
-        </div>
+          <input class="form-control"
+                 [ngClass]="{'is-valid':   !forma.get('nombreCompleto.nombre').errors,
+                             'is-invalid': forma.get('nombreCompleto.nombre').errors}"
+                 type="text"
+                 placeholder="Nombre"
+                 formControlName="nombre">
+
+          <div class="invalid-feedback" *ngIf="forma.get('nombreCompleto.nombre').errors?.required">
+            El nombre es necesario
+          </div>
+
+          <div class="invalid-feedback" *ngIf="forma.get('nombreCompleto.nombre').errors?.minlength">
+           Por lo menos tres caracteres
+          </div>
+
       </div>
     </div>
 
